--- a/Indiez-ZombieWar/Packages/manifest.json
+++ b/Indiez-ZombieWar/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.mobile.android-logcat": "1.4.2",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.recorder": "4.0.3",
     "com.unity.render-pipelines.universal": "14.0.10",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
